# Computer-communication-applications

EX1/: CMakeLists.txt  README  ex1.tar  tweets_generator  tweets_generator.c
EX1/ex1/: markov_chain.c
EX1/ex1_tester/: ex1_tester.py
EX1/ex1_tester/expected/: check_word_count.txt
EX1/ex1_tester/tester/: stdout_test_file_error.txt  stdout_test_usage_error.txt
EX1_LATE/: ex1_tester.tar  justdoit_tweets.txt  markov_chain.c  tweets_generator.c
EX1_LATE/ex1_final/: markov_chain.h  tweets_generator
EX1_LATE/ex1_tester/: ex1_tester.py  linked_list.h
EX1_LATE/ex1_tester/expected/: check_word_enders.txt
EX1_LATE/ex1_tester/tester/: stdout_test_file_error.txt
EX2/: CMakeLists.txt  client  client.c  ex2.tar
EX3/: 501.txt  README  server.c  threadpool.c
EX3/EX3_files/: CMakeLists.txt  ex3.tar  server  server.c  threadpool.h
EX3/EX3_files/send_request/: CMakeLists.txt  client  client.c
EX3_LATE/: CMakeLists.txt  file copy.txt  index.html  server.c
EX3_LATE/testers/assignment3-tester/resources/: threadpool.h
EX3_LATE/testers/assignment3-tester/src/: lib.rs  main.rs
EX4/: gameServer.c  server
EX4/send_request/: CMakeLists.txt  client  client.c
EX4_LATE/: CMakeLists.txt  gameServer 2.c  gameServer.c  gameServer.h  game_server
EX4_LATE/send_request/: client  client.c
